--- a/app/(auth)/map/[username]/styles.css
+++ b/app/(auth)/map/[username]/styles.css
@@ -1,7 +1,7 @@
 /* height of the container */
 .leaflet-container {
-  height: 80vh;
-  width: 80vh;
+  height: 60vh;
+  width: 80vw;
   border-radius: 2rem;
 }
 
